force-app/main/default/objects/CloudCarbonEnergyUse__c/CloudCarbonEnergyUse__c.object-meta.xml
<CustomObject>
    <label>Cloud Carbon Energy Use</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cloud Carbon Energy Uses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>