force-app/main/default/objects/CloudCarbonEnergyUse__c/fields/Annual_Uptime__c.field-meta.xml
<CustomField>
    <fullName>Annual_Uptime__c</fullName>
    <description>Active usage hours in the last year</description>
    <label>Annual Uptime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>