force-app/main/default/objects/CloudCarbonEnergyUse__c/fields/CloudCarbonEmissionsFactor__c.field-meta.xml
<CustomField>
    <fullName>CloudCarbonEmissionsFactor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cloud Carbon Emissions Factor</label>
    <referenceTo>CloudCarbonEmissionsFactor__c</referenceTo>
    <relationshipLabel>Cloud Carbon Energy Uses</relationshipLabel>
    <relationshipName>Cloud_Carbon_Energy_Uses</relationshipName>
    <type>Lookup</type>
</CustomField>