force-app/main/default/objects/CloudCarbonEnergyUse__c/fields/CPU_Description__c.field-meta.xml
<CustomField>
    <fullName>CPU_Description__c</fullName>
    <description>Central processing unit description</description>
    <label>CPU Description</label>
    <length>20</length>
    <type>Text</type>
</CustomField>