force-app/main/default/objects/CloudCarbonEnergyUse__c/fields/CPU_Utilization__c.field-meta.xml
<CustomField>
    <fullName>CPU_Utilization__c</fullName>
    <description>Specific server utilization percentage (Ie. 50% = 50)</description>
    <label>CPU Utilization</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>