force-app/main/default/objects/CloudCarbonEnergyUse__c/fields/Daily_Uptime__c.field-meta.xml
<CustomField>
    <fullName>Daily_Uptime__c</fullName>
    <description>Active usage hours in the last day</description>
    <label>Daily Uptime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>