force-app/main/default/objects/CloudCarbonEnergyUse__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>Timestamp recording end day/time of usage</description>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>