force-app/main/default/objects/CloudCarbonEnergyUse__c/fields/Machine_Type__c.field-meta.xml
<CustomField>
    <fullName>Machine_Type__c</fullName>
    <description>Machine type (Ie. server, laptop, desktop)</description>
    <label>Machine Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>