force-app/main/default/objects/CloudCarbonEnergyUse__c/fields/Memory__c.field-meta.xml
<CustomField>
    <fullName>Memory__c</fullName>
    <label>Memory</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>