force-app/main/default/objects/CloudCarbonEnergyUse__c/fields/Monthly_Uptime__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Uptime__c</fullName>
    <description>Active usage hours in the last month</description>
    <label>Monthly Uptime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>