force-app/main/default/objects/CloudCarbonEnergyUse__c/fields/Projected_Emissions__c.field-meta.xml
<CustomField>
    <fullName>Projected_Emissions__c</fullName>
    <label>Projected Emissions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>