force-app/main/default/objects/CloudCarbonEnergyUse__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Region or state within country server was located</description>
    <label>Region</label>
    <length>20</length>
    <type>Text</type>
</CustomField>