force-app/main/default/objects/CloudCarbonEnergyUse__c/fields/Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider__c</fullName>
    <description>AWS, GCP, Azure, etc...</description>
    <inlineHelpText>AWS, GCP, Azure, etc...</inlineHelpText>
    <label>Service Provider</label>
    <length>20</length>
    <type>Text</type>
</CustomField>