force-app/main/default/objects/CloudCarbonEnergyUse__c/fields/Service_Region__c.field-meta.xml
<CustomField>
    <fullName>Service_Region__c</fullName>
    <label>Service Region</label>
    <length>30</length>
    <type>Text</type>
</CustomField>