force-app/main/default/objects/CloudCarbonEnergyUse__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>Timestamp recording the start day/time of usage</description>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>