force-app/main/default/objects/CloudCarbonEnergyUse__c/fields/Total_Emissions__c.field-meta.xml
<CustomField>
    <fullName>Total_Emissions__c</fullName>
    <label>Total Emissions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>