force-app/main/default/objects/CloudCarbonEnergyUse__c/fields/Weekly_Uptime__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Uptime__c</fullName>
    <description>Active usage hours in the last week</description>
    <inlineHelpText>Active usage hours in the last week</inlineHelpText>
    <label>Weekly Uptime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>